--- a/css/styles.css
+++ b/css/styles.css
@@ -506,6 +506,7 @@ footer {
 .footer-container {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .footer-join {
@@ -515,7 +516,6 @@ footer {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--third-text-color);
-  margin-bottom: 20px;
 }
 
 .icons-link.footer {
@@ -530,6 +530,59 @@ footer {
 .icons-link.footer:hover,
 .icons-link.footer:focus {
   background-color: var(--accent-color);
+}
+
+.footer-subscription {
+  margin-right: 0;
+  margin-left: 93px;
+}
+
+.footer-input::placeholder {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-form {
+  display: flex;
+  margin-top: 20px;
+}
+
+.footer-btn {
+  border-radius: 4px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 28px;
+  padding-left: 28px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  background-color: var(--accent-color);
+  color: var(--third-text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-right: 12px;
+  color: var(--third-text-color);
+}
+
+.icon-subscribtion {
+  margin-left: 10px;
 }
 
 /* Portfolio */
@@ -676,6 +729,7 @@ footer {
   opacity: 1;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px;
 }
 
 .close-btn {
@@ -698,4 +752,124 @@ footer {
 .backdrop.is-hidden .modal {
   transform: scale(1.1);
   opacity: 0.5;
+}
+
+.modal-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  background: transparent;
+  padding-left: 42px;
+  padding-right: 15px;
+  outline: none;
+}
+
+.modal-input:focus,
+.modal-comment:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.label-text {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.input-label {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--second-text-color);
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.input-wrapper {
+  display: block;
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.modal-comment {
+  width: 100%;
+  resize: none;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  background: transparent;
+  margin-top: 4px;
+  margin-bottom: 10px;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  outline: none;
+}
+
+.modal-comment::placeholder {
+  color: rgba(33, 33, 33, 0.2);
+}
+
+.modal-btn {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 56px;
+  padding-right: 56px;
+  background-color: var(--accent-color);
+  color: var(--third-text-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  display: block;
+  margin: 0 auto;
+}
+
+.checkbox-text {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
+  display: flex;
+}
+
+.checkbox-text-link {
+  color: var(--accent-color);
+}
+
+.checkbox-text span {
+  width: 15px;
+  height: 15px;
+  border: 2px solid --main-text-color;
+  border-radius: 2px;
+  margin-right: 8px;
 }
