--- a/css/styles.css
+++ b/css/styles.css
@@ -833,6 +833,11 @@ footer {
 
 .modal-comment::placeholder {
   color: rgba(33, 33, 33, 0.2);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
 }
 
 .modal-btn {
@@ -869,7 +874,22 @@ footer {
 .checkbox-text span {
   width: 15px;
   height: 15px;
-  border: 2px solid --main-text-color;
+  border: 2px solid #212121;
   border-radius: 2px;
   margin-right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.checkbox-text:checked + .checkbox-text span {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.accept-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
