--- a/css/styles.css
+++ b/css/styles.css
@@ -716,9 +716,6 @@ footer {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -730,8 +727,10 @@ footer {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  position: relative;
-  transform: scale(1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
   opacity: 1;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -826,7 +825,6 @@ footer {
   border-radius: 4px;
   background: transparent;
   margin-top: 4px;
-  margin-bottom: 20px;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 12px;
@@ -868,6 +866,7 @@ footer {
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   display: flex;
+  margin-top: 20px;
   margin-bottom: 30px;
   align-items: center;
   justify-content: center;
@@ -888,7 +887,7 @@ footer {
   justify-content: center;
 }
 
-.checkbox-text:checked + .checkbox-text span {
+.modal-checkbox:checked + .checkbox-text span {
   background-color: var(--accent-color);
   border: none;
 }
